<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh"
        android:contentDescription="@string/content_description_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mapView"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/mapView"
        android:contentDescription="@string/content_description_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/listView"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/listView"
        android:contentDescription="@string/content_description_list"
        app:showAsAction="ifRoom"
        android:visible="false"/>

</menu>